--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,26 +1,14 @@
 {
-    "name": "Containerlab Dev",
-    "build": {
-      "dockerfile": "../Dockerfile"
-    },
+    "image": "ghcr.io/srl-labs/containerlab/devcontainer-dood-slim:0.60.1",
     "runArgs": [
-      "--privileged",
-      "--network=host"
+        "--network=host",
+        "--pid=host",
+        "--privileged"
     ],
-    "workspaceMount": "source=${localWorkspaceFolder},target=/home/clab/workspace,type=bind",
-    "workspaceFolder": "/home/clab/workspace",
-    "postCreateCommand": "echo 'Containerlab listo. Usa cd labs && sudo containerlab deploy -t simple-lab.clab.yml'",
-    "customizations": {
-      "vscode": {
-        "extensions": [
-          "ms-azuretools.vscode-docker"
-        ]
-      }
-    },
-    "hostRequirements": {
-      "cpus": 4,
-      "memory": "8gb",
-      "storage": "32gb"
-    }
-  }
-  
+    "mounts": [
+        "type=bind,src=/var/lib/docker,dst=/var/lib/docker",
+        "type=bind,src=/lib/modules,dst=/lib/modules"
+    ],
+    "workspaceFolder": "${localWorkspaceFolder}",
+    "workspaceMount": "source=${localWorkspaceFolder},target=${localWorkspaceFolder},type=bind,consistency=cached"
+}
